# Lab-F24

./: .gitignore  CMakeLists.txt
01/: Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp
02/: Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp
03/: Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp
04/: Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp  Task6.cpp  Task7.cpp  Task8.cpp
05/: Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp
06/: Task1.cpp  Task2.cpp  Task3.cpp
07/: Task1.cpp  Task2.cpp  Task3.cpp
08/: Task1.cpp  Task2.cpp  Task3.cpp  Task4.cpp  Task5.cpp
09/: Task1.cpp
10/: Task1.cpp
11/: Task1.cpp  Task2.cpp  Task3.cpp
Classes/: 01.cpp
Foundations/: Arrays.cpp  Icecream.cpp  MemAlloc.cpp  Mid.md  TicTacToe.cpp
Foundations/Headers/: Cog.cpp  Cog.h  Utilities.h
Sub/: ArraySearch.cpp  BinarySearch.cpp  BubbleSort.cpp  DynamicMemory.cpp  InsertionSort.cpp  LinearSearch.cpp  Reference.cpp  SeatingManagement.cpp  Vectors.cpp
