cmake_minimum_required(VERSION 3.29)
project(Lab_F24)

set(CMAKE_CXX_STANDARD 20)

add_executable(Task1.1 01/Task1.cpp)
add_executable(Task1.2 01/Task2.cpp)
add_executable(Task1.3 01/Task3.cpp)
add_executable(Task1.4 01/Task4.cpp)

add_executable(Task2.1 02/Task1.cpp)
add_executable(Task2.2 02/Task2.cpp)
add_executable(Task2.3 02/Task3.cpp)
add_executable(Task2.4 02/Task4.cpp)

add_executable(Task3.1 03/Task1.cpp)
add_executable(Task3.2 03/Task2.cpp)
add_executable(Task3.3 03/Task3.cpp)
add_executable(Task3.4 03/Task4.cpp)

add_executable(Task4.1 04/Task1.cpp)
add_executable(Task4.2 04/Task2.cpp)
add_executable(Task4.3 04/Task3.cpp)

add_executable(Classes.01 Classes/01.cpp)